# corpus1

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
docs/jupyter_execute/jupyter_execute/jupyter_execute/: example.ipynb
src/corpus1/: __init__.py
tests/: test_corpus.py  test_corpus1.py
