[tool.poetry]
name = "corpus1"
version = "0.1.0"
description = "Handle basic corpus operations"
authors = ["Sharanya"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.10.7"

[tool.poetry.group.dev.dependencies]
myst-nb = "^1.3.0"
sphinx-autoapi = "^3.6.1"
sphinx-rtd-theme = "^3.0.2"
pre-commit = "^4.4.0"
pytest = "^9.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
